about component text bg overlap fix

--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,5 +1,5 @@
 #about-wrapper {
-  background: url("../../assets/crab.svg") 100% 10% no-repeat,
+  background: url("../../assets/crab.svg") 100% 0 no-repeat,
     url("../../assets/starfish.svg") 0 95% no-repeat;
   padding-bottom: 80px;
 }
